tests/pact/bad/bad-parens.repl

(define-keyset 'k (sig-keyset))
(module parensfordays 'k
  (defun foo () 1))))))

1
